--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
 <a id="an-app-to-recognize-cuneiform-characters-on-your-android-phone" class="anchor" href="#an-app-to-recognize-cuneiform-characters-on-your-android-phone" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>An App to recognize cuneiform characters on your Android phone</h1>
 
 <p><img src="https://raw.githubusercontent.com/situx/CuneiPainter/master/doc/cp1small.png" alt="CuneiPainter1" title="CuneiPainter1">  <img src="https://raw.githubusercontent.com/situx/CuneiPainter/master/doc/cp2small.png" alt="CuneiPainter2" title="CuneiPainter2"></p>
+
+<hr>
+
+<p>CuneiPainter enables you to paint cuneiform characters using your fingers on the touchscreen of your smartphone.
+The app recognizes the four stroke types of cuneiform as defined by the <a href="http://cdli.mpiwg-berlin.mpg.de/pubs/cdln/php/single.php?id=000070">Gottstein System</a>:</p>
+
+<ul>
+<li>left to right (A)</li>
+<li>up to down (B)</li>
+<li>down right to up left (C)</li>
+<li>down left to up right (D)
+Wedges are recognized as class C and not as class E as also suggested by Gottstein.</li>
+</ul>
       </section>
     </div>
 
