Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@ The app recognizes the four stroke types of cuneiform as defined by the <a href=
 <li>left to right (A)</li>
 <li>up to down (B)</li>
 <li>down right to up left (C)</li>
-<li>down left to up right (D)
-Wedges are recognized as class C and not as class E as also suggested by Gottstein.</li>
+<li>down left to up right (D)</li>
 </ul>
+
+<p>Wedges are recognized as class C and not as class E as also suggested by Gottstein.</p>
+
+<p>This app uses the Akkadian font by <a href="www.bronzeage.org.uk/ancient-fonts.aspx">Andrea Vianello</a> as provided in the Open Source package <a href="https://packages.debian.org/sid/ttf-ancient-fonts">ttf-ancient-fonts</a> </p>
       </section>
     </div>
 
